--- a/composer.json
+++ b/composer.json
@@ -17,8 +17,9 @@
     ],
     "require": {
         "php": "^8.3",
+        "illuminate/contracts": "^11.0",
         "spatie/laravel-package-tools": "^1.16",
-        "illuminate/contracts": "^11.0"
+        "statamic/cms": "^5.48"
     },
     "require-dev": {
         "laravel/pint": "^1.14",
