--- a/composer.json
+++ b/composer.json
@@ -57,7 +57,8 @@
         "sort-packages": true,
         "allow-plugins": {
             "pestphp/pest-plugin": true,
-            "phpstan/extension-installer": true
+            "phpstan/extension-installer": true,
+            "pixelfear/composer-dist-plugin": true
         }
     },
     "extra": {
